--- a/Converted HTML for DigiPub final/Introduction.html
+++ b/Converted HTML for DigiPub final/Introduction.html
@@ -1,480 +1,14 @@
+<!DOCTYPE html>
+<html>
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+<head>
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<title>338 DigiPub Final - Introduction\338 DigiPub Final - Introduction</title>
 
-/* END RESET */
 
-
-
-/* ---------------------------------------------------------------------------------------
-BODY STYLES
- ----------------------------------------------------------------------------------------- */
-
-body {
-  margin: auto;
-  font-family: serif;
-  font-size: 20px;
-  padding-bottom: 10px;
-  padding: 0px;
-  margin-top:-25px;
-  line-height: 1.4;
-  letter-spacing: .015em;
-}
-
-body > *:first-child {
-  margin-top: 0 !important; }
-body > *:last-child {
-  margin-bottom: 0 !important; }
-
-
-
-/*HEADING styles*/
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0px 0px 0px;
-  padding: 0;
-  font-weight: bold;
-  -webkit-font-smoothing: antialiased;
-  cursor: text;
-  border:  1px solid green;
-}
-
-h1 {
-  margin:auto;
-  margin-top: 1em;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  font-family: sans-serif;
-}
-
-h2 { 
-  font-family: sans-serif;
-  font-size: 1.5em;
-  margin-top: 5%;
-  }
-
-ul, ol {
-  border:  1px solid pink;
-}
-
-li {
-  border:  1px solid lightblue;
-}
-
-
-
-
-/*LINK styles*/
-
-a {
-  color: #58595b; }
-a.absent {
-  color: #58595b; }
-a.anchor {
-  display: block;
-  padding-left: 30px;
-  margin-left: -30px;
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0; }
-  
-
-/*Main Wrapper styles*/
-
-#wrapper { 
-	margin:auto;
-	padding:0%;
-  max-width: 1000px;
-  border:  1px solid blue;
-}
-
-#wrapper p {
-  padding:1% 4%;
-  line-height: 1.5;
-}
-
-
-
-
-
-
-/* ---------------------------------------------------------------------------------------
-SIDEBAR MENU STYLES
- ----------------------------------------------------------------------------------------- */
-
-
-/*.accordion {
-    background-color: #fff;
-    font-family: sans-serif;
-    cursor: pointer;
-    padding: 2%;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-    font-size:1.1em;
-    line-height: 1.5em;
-}
-*/
-/*.panel {
-    padding: 0 18px;
-    display: none;
-    overflow: scroll;
-    list-style:none;
-    font-size: 1em;
-  }*/
-
-
-
-header {
-  position: relative;
-	width: 40%;
-	left: 0px;
-	top:0px; 
-  background: transparent;
-  border:  1px solid yellow;
-}
-
-#mainSidenav h1 {
-     font-size: 1.7em;
-     margin-left: 5%;
-     line-height: 1.2;
-     letter-spacing: .1em;
-     text-align: left;
-     margin-bottom: 4%;
-     font-family: sans-serif;
-  }
-
-#mainSidenav.small{
-   font-size: .45em;
-   line-height: 1.25;
-   padding-top: 0;
-   padding-left: 0;
-   margin-left: 0;
-   margin-top: 5%;
-   letter-spacing: normal;
-   text-align: left;
-}
-
-.sidenav h1 { 
-   font-family:  sans-serif;
-  font-size: 1.7em;
-
-  text-align:left;
-  margin-top: 5%;
-  }
-
-.sidenav hr {
-    border: 0;
-    height: 1px;
-    background: #333;
-}
-
-.small {
-  display:block;
-  color: #000;
-  font-size: .53em;
-  font-style: italic;
-  font-weight: normal;
-  margin: 5% 0;
-  font-family: sans-serif;
-   line-height: 1.25;
-   padding-top: 0;
-   padding-left: 0;
-   margin-top: 5%;
-   letter-spacing: normal;
-   text-align: left;
-  }
-
-.sidenav p {
-  font-size: .6em;
-  font-family: serif;
-  text-align: left;
-  margin-left: 0%;
-  width: 80%;
-}
-
-
-
-
-/* ---------------------------------------------------------------------------------------
-HAMBURGER MENU STYLES
- ----------------------------------------------------------------------------------------- */
-  #burger {
-    position: fixed;
-    top: 0%;
-    left: 0%;
-    width: 99%;
-    border: 0px solid red;
-    text-align: left;
-    z-index: 20;
-    display: block;
-    text-shadow: 1px 1px 1px #999;
-    background-color:transparent;
-    /*background-image: url("img/stripes1.png");*/
-    padding-bottom: 1%;
-    padding-left: 1%;
-  }
-  
-  .sidenav {
-    height: 90%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: white;
-    overflow-x: hidden;
-    overflow-y: auto;
-    transition: 0.5s;
-    padding: 1% 0% 10% 1%;
-    border: 1px solid red;
-    background-color: #FFF;
-}
-
-nav {
-    padding-top: 8%;
-    padding-bottom: 10%;
-    padding-left: 4%;
-}
-
-.sidenav .panel a {
-    padding: 2% 3%;
-    text-decoration: none;
-    display: block;
-    transition: 0.3s;
-}
-
-.toc-item {
-  padding-left: 0%;
-}
-
-.panel a {
-    font-size: .7em;
-    font-family: serif
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0%;
-    right: 3%;
-    font-size: 1.5em;
-    z-index: 5;
-    text-decoration: none;
-}
-
-#close-btn {
-  display: none;
-}
-
-
-a:hover {
-  color: #d1d3d4;
-  text-decoration: underline;
-  border: none;
-}
-
-
-
-
-/*IMAGE styles*/
-
-img {
-display: block;
-/*margin: 0% auto;*/
-width: 100%; 
-/*max-width: 800px;*/
-}
-
-img.smaller {
-width: 90%; 
-max-width: 400px;
-margin: 0% auto;
-}
-
-img.medium {
-width: 90%; 
-max-width: 600px;
-margin: 0% auto;
-}
-
-img.much-smaller {
-width: 90%; 
-max-width: 275px;
-margin: 0% auto;
-}
-
-.logos {
-  width: 100%;
-  margin-left: -15px;
-}
-
-.logos2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 1%;
-  width:90%;
-  margin: 0 auto;
-}
-
-.logos img {
-  width: 100%;
-}
-
-
-figure {
-  height: auto;
-  width: auto;
-  padding: 0;
-  text-align: center;
-  margin: 0%;
-  margin-bottom: 5%;
-}
-
-
-figcaption  {
-    font-style: italic;
-    font-size: .8em;
-    text-align: center;
-    width: auto;
-    margin: auto;
-    padding: 1%;
-}
-
-
-
-/*blockquote styles*/
-
-blockquote {
-  border-left: 4px solid #ddd;
-  padding: 0 5%;
-  margin-left: 6%;
-  margin-right: 4%;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  font-size: 1.2em;
-  line-height: 1.5;
-  color: #777777;
-  font-weight: lighter;
-  font-style: italic;
-}
-
-
-
-
-
-/*
------------------------------------------------------------------
-
-MEDIA QUERIES
-
-_________________________________________________________________
-
-*/
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 10%;}
-  .sidenav a {font-size: 1.1em;}
-}
-
-@media screen and (max-width: 750px) {
-  .sidenav { width: 0%;}
- 
-  h1{
-    padding-top: 1em;
-  }
-
-  h3{
-    margin-top: 100px;
-  }
-}
-
-@media screen and (min-width: 751px) {
-   
-
-  #main{
-    margin-top: 0em;
-  }
-
-  .sidenav {
-    height: 85%;
-    font-family: sans-serif;
-  }
-
-  #burger {
-    display: none;
-  }
-
-  #wrapper {
-  margin: 0 5% 0 5% 0;
-  padding:0%;
-  }
-
-
-
-}
-
-
-
-@media print {
-	table, pre {
-		page-break-inside: avoid;
-	}
-	pre {
-		word-wrap: break-word;
-	}
-}
-
-
-/* IMPORTED FROM MACDOWN
-   COMMENTED OUT BUT FEEL FREE TO USE FOR STYLES
-
+<style type="text/css">
 body {
   font-family: Helvetica, arial, sans-serif;
   font-size: 14px;
@@ -790,4 +324,22 @@ kbd {
     padding: 2cm; 
   }
 }
-*/
+</style>
+
+
+</head>
+
+<body>
+
+<h2 id="toc_0">Introduction</h2>
+
+<p>This is a publication written by students for students interested in obtaining a Bachelor of Arts degree in Digital Technology and Culture with the Creative Media and Digital Culture (CMDC) program through Washington State University Vancouver. </p>
+
+<p>Our goal with this handbook is to inform you, our future students, on what to expect from your experience within the CMDC program. We as current students know how scary it can be to go into the program or any other degree not knowing what it to expect. To offer incoming students some guidance that we could have benefitted from, we hope that this guide will provide you with some insight to get to know the program a little better before diving in.</p>
+
+
+
+
+</body>
+
+</html>
