--- a/Converted HTML for DigiPub final/Superpowers.html
+++ b/Converted HTML for DigiPub final/Superpowers.html
@@ -1,480 +1,14 @@
+<!DOCTYPE html>
+<html>
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+<head>
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<title>338 DigiPub Final - Superpowers\338 DigiPub Final - Superpowers</title>
 
-/* END RESET */
 
-
-
-/* ---------------------------------------------------------------------------------------
-BODY STYLES
- ----------------------------------------------------------------------------------------- */
-
-body {
-  margin: auto;
-  font-family: serif;
-  font-size: 20px;
-  padding-bottom: 10px;
-  padding: 0px;
-  margin-top:-25px;
-  line-height: 1.4;
-  letter-spacing: .015em;
-}
-
-body > *:first-child {
-  margin-top: 0 !important; }
-body > *:last-child {
-  margin-bottom: 0 !important; }
-
-
-
-/*HEADING styles*/
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0px 0px 0px;
-  padding: 0;
-  font-weight: bold;
-  -webkit-font-smoothing: antialiased;
-  cursor: text;
-  border:  1px solid green;
-}
-
-h1 {
-  margin:auto;
-  margin-top: 1em;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  font-family: sans-serif;
-}
-
-h2 { 
-  font-family: sans-serif;
-  font-size: 1.5em;
-  margin-top: 5%;
-  }
-
-ul, ol {
-  border:  1px solid pink;
-}
-
-li {
-  border:  1px solid lightblue;
-}
-
-
-
-
-/*LINK styles*/
-
-a {
-  color: #58595b; }
-a.absent {
-  color: #58595b; }
-a.anchor {
-  display: block;
-  padding-left: 30px;
-  margin-left: -30px;
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0; }
-  
-
-/*Main Wrapper styles*/
-
-#wrapper { 
-	margin:auto;
-	padding:0%;
-  max-width: 1000px;
-  border:  1px solid blue;
-}
-
-#wrapper p {
-  padding:1% 4%;
-  line-height: 1.5;
-}
-
-
-
-
-
-
-/* ---------------------------------------------------------------------------------------
-SIDEBAR MENU STYLES
- ----------------------------------------------------------------------------------------- */
-
-
-/*.accordion {
-    background-color: #fff;
-    font-family: sans-serif;
-    cursor: pointer;
-    padding: 2%;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-    font-size:1.1em;
-    line-height: 1.5em;
-}
-*/
-/*.panel {
-    padding: 0 18px;
-    display: none;
-    overflow: scroll;
-    list-style:none;
-    font-size: 1em;
-  }*/
-
-
-
-header {
-  position: relative;
-	width: 40%;
-	left: 0px;
-	top:0px; 
-  background: transparent;
-  border:  1px solid yellow;
-}
-
-#mainSidenav h1 {
-     font-size: 1.7em;
-     margin-left: 5%;
-     line-height: 1.2;
-     letter-spacing: .1em;
-     text-align: left;
-     margin-bottom: 4%;
-     font-family: sans-serif;
-  }
-
-#mainSidenav.small{
-   font-size: .45em;
-   line-height: 1.25;
-   padding-top: 0;
-   padding-left: 0;
-   margin-left: 0;
-   margin-top: 5%;
-   letter-spacing: normal;
-   text-align: left;
-}
-
-.sidenav h1 { 
-   font-family:  sans-serif;
-  font-size: 1.7em;
-
-  text-align:left;
-  margin-top: 5%;
-  }
-
-.sidenav hr {
-    border: 0;
-    height: 1px;
-    background: #333;
-}
-
-.small {
-  display:block;
-  color: #000;
-  font-size: .53em;
-  font-style: italic;
-  font-weight: normal;
-  margin: 5% 0;
-  font-family: sans-serif;
-   line-height: 1.25;
-   padding-top: 0;
-   padding-left: 0;
-   margin-top: 5%;
-   letter-spacing: normal;
-   text-align: left;
-  }
-
-.sidenav p {
-  font-size: .6em;
-  font-family: serif;
-  text-align: left;
-  margin-left: 0%;
-  width: 80%;
-}
-
-
-
-
-/* ---------------------------------------------------------------------------------------
-HAMBURGER MENU STYLES
- ----------------------------------------------------------------------------------------- */
-  #burger {
-    position: fixed;
-    top: 0%;
-    left: 0%;
-    width: 99%;
-    border: 0px solid red;
-    text-align: left;
-    z-index: 20;
-    display: block;
-    text-shadow: 1px 1px 1px #999;
-    background-color:transparent;
-    /*background-image: url("img/stripes1.png");*/
-    padding-bottom: 1%;
-    padding-left: 1%;
-  }
-  
-  .sidenav {
-    height: 90%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: white;
-    overflow-x: hidden;
-    overflow-y: auto;
-    transition: 0.5s;
-    padding: 1% 0% 10% 1%;
-    border: 1px solid red;
-    background-color: #FFF;
-}
-
-nav {
-    padding-top: 8%;
-    padding-bottom: 10%;
-    padding-left: 4%;
-}
-
-.sidenav .panel a {
-    padding: 2% 3%;
-    text-decoration: none;
-    display: block;
-    transition: 0.3s;
-}
-
-.toc-item {
-  padding-left: 0%;
-}
-
-.panel a {
-    font-size: .7em;
-    font-family: serif
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0%;
-    right: 3%;
-    font-size: 1.5em;
-    z-index: 5;
-    text-decoration: none;
-}
-
-#close-btn {
-  display: none;
-}
-
-
-a:hover {
-  color: #d1d3d4;
-  text-decoration: underline;
-  border: none;
-}
-
-
-
-
-/*IMAGE styles*/
-
-img {
-display: block;
-/*margin: 0% auto;*/
-width: 100%; 
-/*max-width: 800px;*/
-}
-
-img.smaller {
-width: 90%; 
-max-width: 400px;
-margin: 0% auto;
-}
-
-img.medium {
-width: 90%; 
-max-width: 600px;
-margin: 0% auto;
-}
-
-img.much-smaller {
-width: 90%; 
-max-width: 275px;
-margin: 0% auto;
-}
-
-.logos {
-  width: 100%;
-  margin-left: -15px;
-}
-
-.logos2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 1%;
-  width:90%;
-  margin: 0 auto;
-}
-
-.logos img {
-  width: 100%;
-}
-
-
-figure {
-  height: auto;
-  width: auto;
-  padding: 0;
-  text-align: center;
-  margin: 0%;
-  margin-bottom: 5%;
-}
-
-
-figcaption  {
-    font-style: italic;
-    font-size: .8em;
-    text-align: center;
-    width: auto;
-    margin: auto;
-    padding: 1%;
-}
-
-
-
-/*blockquote styles*/
-
-blockquote {
-  border-left: 4px solid #ddd;
-  padding: 0 5%;
-  margin-left: 6%;
-  margin-right: 4%;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  font-size: 1.2em;
-  line-height: 1.5;
-  color: #777777;
-  font-weight: lighter;
-  font-style: italic;
-}
-
-
-
-
-
-/*
------------------------------------------------------------------
-
-MEDIA QUERIES
-
-_________________________________________________________________
-
-*/
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 10%;}
-  .sidenav a {font-size: 1.1em;}
-}
-
-@media screen and (max-width: 750px) {
-  .sidenav { width: 0%;}
- 
-  h1{
-    padding-top: 1em;
-  }
-
-  h3{
-    margin-top: 100px;
-  }
-}
-
-@media screen and (min-width: 751px) {
-   
-
-  #main{
-    margin-top: 0em;
-  }
-
-  .sidenav {
-    height: 85%;
-    font-family: sans-serif;
-  }
-
-  #burger {
-    display: none;
-  }
-
-  #wrapper {
-  margin: 0 5% 0 5% 0;
-  padding:0%;
-  }
-
-
-
-}
-
-
-
-@media print {
-	table, pre {
-		page-break-inside: avoid;
-	}
-	pre {
-		word-wrap: break-word;
-	}
-}
-
-
-/* IMPORTED FROM MACDOWN
-   COMMENTED OUT BUT FEEL FREE TO USE FOR STYLES
-
+<style type="text/css">
 body {
   font-family: Helvetica, arial, sans-serif;
   font-size: 14px;
@@ -790,4 +324,190 @@ kbd {
     padding: 2cm; 
   }
 }
-*/
+</style>
+
+
+</head>
+
+<body>
+
+<h2 id="toc_0">Web Development</h2>
+
+<h3 id="toc_1">Mentor</h3>
+
+<p>Will Luers &amp; John Barber</p>
+
+<h3 id="toc_2">Job Examples</h3>
+
+<p><strong>Front End Designer</strong></p>
+
+<p><strong>Back End Designer</strong></p>
+
+<p><strong>Full Stack Web Developer (front and back)</strong></p>
+
+<p><strong>Search Engine Optimization Specialist (SEO)</strong></p>
+
+<p><strong>Content Developer (video, images, writing, sound, etc.)</strong></p>
+
+<p><strong>Web design and development</strong> is a field that focuses on creating webpages and web apps. It can include frontend, backend, and full stack work. Job titles can vary depending on the employer and job requirements; some examples include web developer, frontend developer, backend developer, JavaScript developer, web designer, software engineer, and content or web specialist. There are a large variety of tools and technologies used in this field.</p>
+
+<p><strong>Search Engine Optimization</strong>, abbreviated SEO, is about boosting the ranking and visibility of a website and its content. Typically SEO is part of creating websites, but it can also be considered part of social media strategies as it helps increase the presence of the website and whatever person or company it represents. Some of the technologies used include Google Search Engine, meta tags and schema in HTML5, and using specific keywords to attract users. If the website is based in WordPress, Yoast is a major plugin among several that help with SEO.</p>
+
+<h3 id="toc_3">Example of tools</h3>
+
+<ul>
+<li>HTML5</li>
+<li>CSS3</li>
+<li>JavaScript</li>
+<li>PHP</li>
+<li>SQL</li>
+</ul>
+
+<h3 id="toc_4">Text editors/IDEs</h3>
+
+<ul>
+<li>Sublime</li>
+<li>VS Code</li>
+<li>Brackets</li>
+<li>BBEdit</li>
+<li>Git and Github/Gitlab</li>
+</ul>
+
+<p>Alumni: Jacob Eddings, Cullen Thomas, Betsy Hanrahan, Jessica Grubbs, Jessica Unruh, Sorya Baxter, Roxana Moreno-Flores </p>
+
+<h2 id="toc_5">Audio/Video</h2>
+
+<h3 id="toc_6">Mentor</h3>
+
+<p>Will Luers &amp; Brenda Grell</p>
+
+<p>Job Examples</p>
+
+<p><strong>Audio/Video Producer</strong></p>
+
+<p><strong>Audio/Video Post-Producer</strong></p>
+
+<p><strong>Audio/video production</strong> and post-production involves creating, editing, and finalizing audio and video media. Producers can generate their own content, but can also edit content that was previously filmed or recorded by different people. This can be things like environmental audio for games, soundtracks for movies, show or movie trailers, and promotional videos.</p>
+
+<h3 id="toc_7">Example of tools</h3>
+
+<ul>
+<li>Adobe After Effects</li>
+<li>Adobe Premiere Pro </li>
+<li>Adobe Audition</li>
+</ul>
+
+<p>Alumni: Joel Clapp, Ransom Reed</p>
+
+<h2 id="toc_8">Multimedia Design</h2>
+
+<h3 id="toc_9">Mentor</h3>
+
+<p>Chris Dreger</p>
+
+<p>Job Examples</p>
+
+<p><strong>Multimedia Designer</strong></p>
+
+<p><strong>Content Developer</strong></p>
+
+<p><strong>Multimedia design</strong> is a form of design that is primarily digital but can use techniques from traditional fine arts. It involves color theory, typography, form and function, as well as a knack for using design or art-based software. The designer’s work may include logos, illustrations for a website or digital book, or branding for a business or product.</p>
+
+<p><strong>Content development</strong> involves creating a variety of media and text items. This can range anywhere from blog posts, graphics, videos, and animation. The central idea is that something is being created. Companies may want a content creator to produce content for their social media, take photos, or create images for later use.</p>
+
+<h3 id="toc_10">Example of tools</h3>
+
+<ul>
+<li>Adobe Photoshop</li>
+<li>Illustrator</li>
+<li>InDesign</li>
+</ul>
+
+<p>Alumni: Miranda Embrey, Megan Tuthill,  Katya Farinsky</p>
+
+<h2 id="toc_11">Social Media</h2>
+
+<h3 id="toc_12">Mentor</h3>
+
+<p>Michael Rabby</p>
+
+<p>Job Examples</p>
+
+<p><strong>Social Media Marketer</strong></p>
+
+<p><strong>Social Media Communication Specialist</strong></p>
+
+<p><strong>Search Engine Marketing (SEM) Specialist</strong></p>
+
+<p><strong>​​Social media</strong> as a superpower is about promoting and boosting the online presence of the company, website, or product. It involves conducting research into the userbase of said product and determining how best to reach them. It can also include managing social media accounts, posting to a blog, or developing new content for social media platforms.</p>
+
+<h3 id="toc_13">Example of tools</h3>
+
+<ul>
+<li>Later.com</li>
+<li>Canva</li>
+<li>Campaign Monitor</li>
+<li>Hootsuite</li>
+</ul>
+
+<p>Alumni: Tanner Schneider, Becca Roy, Kara Klaus</p>
+
+<h2 id="toc_14">Animation</h2>
+
+<h3 id="toc_15">Mentor</h3>
+
+<p>Brenda Grell</p>
+
+<p>Job Examples</p>
+
+<p><strong>2D/3D Animator</strong></p>
+
+<p><strong>3D Modeler</strong></p>
+
+<p><strong>Character Rigger</strong></p>
+
+<p><strong>Character Design</strong></p>
+
+<p><strong>Concept Artist</strong></p>
+
+<p><strong>Animation</strong> is all about knowing how to create animations fluently. This mainly involves those who can design in either 2D and/or 3D. Job examples are animators, concept artist, game developer, graphic designer, illustrator, VFX artist, and web designer.</p>
+
+<h3 id="toc_16">Example of tools</h3>
+
+<ul>
+<li>Adobe Premiere</li>
+<li>Adobe After Effects</li>
+<li>Adobe Animate</li>
+<li>Maya</li>
+<li>Blender</li>
+</ul>
+
+<p>Alumni: Jaden Denfeld, Lily Tan, Nix Pendergast, Flynn Gonzalez, Rachel Kramer</p>
+
+<h2 id="toc_17">Digital Publishing</h2>
+
+<h3 id="toc_18">Mentor</h3>
+
+<p>Will Luers</p>
+
+<p>Job Examples</p>
+
+<p><strong>Multimedia Writer</strong></p>
+
+<p><strong>Digital publishing</strong> is for those who are involved with writing in the hypermedia area along with understanding the different mediums of writing. Jobs usually revolve around where writing is needed from writing for online media (newspapers and magazines) to multiple varieties (video games, television and film). Some jobs would require one to understand how to use hypertext.</p>
+
+<h3 id="toc_19">Example of tools</h3>
+
+<ul>
+<li>HTML5</li>
+<li>Adobe Creative Suite</li>
+</ul>
+
+<p>Alumni: Stratton Slater</p>
+
+
+
+
+</body>
+
+</html>
